spacing fixes, add default colors

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -226,7 +226,7 @@
     &.expanded,
     &.expandable.active {
       margin-bottom: 17px;
-      padding: 28px;
+      padding: 25px;
 
       .title.title {
         display: block;
