--- a/src/_content.less
+++ b/src/_content.less
@@ -3,10 +3,13 @@
 #content-wrap#content-wrap {
   .content,
   .content-inner {
-    margin: 5px;
     font-size: 14px;
     line-height: 1.7;
     color: @default-text;
+  }
+
+  .content-inner {
+    margin: 5px;
   }
 
   .content {
