--- a/src/_variables.less
+++ b/src/_variables.less
@@ -1,3 +1,5 @@
+@default-fg: #000;
+@default-bg: #fff;
 @color-published: #e84;
 @color-marked: #6b5;
 @color-checked: #db0;
